add prettier config

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Piyush",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
