--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chai-backend-2",
   "version": "1.0.0",
   "description": "is backend project",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -20,6 +20,8 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   }
 }
